--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,161 @@
 					</div>
 					<div class="top-nav">
 						<div class="person-information">
-							<!--<img src=""/>-->
+							<!--头部未登录时状态栏 开始-->
+							<ul class="unloaded-nav">
+								<li class="status">
+									<a href="javascript:void(0);">登录</a>
+								</li>
+								<li class="status">
+									<a href="javascript:void(0);">注册</a>
+								</li>
+								<!--mini-购物车栏开始-->
+								<li class="mini-cart">
+									<div class="cart-nav">
+										<i class="iconfont icon-gouwuche"></i>
+										<a href="javascript:void(0);">购物车</a>
+										<span>(0)</span>
+									</div>
+									<!--空购物车开始-->
+									<div class="empty-cart">
+										<p>购物车中还没有商品，赶紧选购吧！</p>
+									</div>
+									<!--空购物车结束-->
+									<!--购物车toast（有货）开始-->
+									<div class="exist-cart">
+										<div class="cart-list">
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">灰太狼平底锅</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+										</div>
+										<div class="cart-payment">
+											<div class="cart-left">
+												<p>共<em>3</em>件商品</p>
+												<span class="cart-price"><em>378</em>元</span>
+											</div>
+											<div class="cart-right">
+												<a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+											</div>
+										</div>
+									</div>
+									<!--购物车toast（有货）结束-->
+								</li>
+								<!--mini-购物车栏结束-->
+							</ul>
+							<!--头部未登录时状态栏 结束-->
+							<!--头部登录时状态栏 开始-->
+							<ul class="loaded-nav">
+								<li class="status">
+									<a href="javascript:void(0);">个人昵称</a>
+								</li>
+								<!--mini-购物车栏 开始-->
+								<li class="mini-cart">
+									<div class="cart-nav">
+										<i class="iconfont icon-gouwuche"></i>
+										<a href="javascript:void(0);">购物车</a>
+										<span>(0)</span>
+									</div>
+									<div class="empty-cart">
+										<p>购物车中还没有商品，赶紧选购吧！</p>
+									</div>
+									<div class="exist-cart">
+										<div class="cart-list">
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">灰太狼平底锅</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+											<div class="cart-item">
+												<div class="cart-group">
+													<img src="https://i1.mifile.cn/a1/pms_1513864376.45999722.jpg?width=60&height=60" alt="" />
+													<a href="">联蔚微波炉</a><span class="item-price"><a>123</a>元</span>
+												</div>
+												<span class="cart-close">关</span>
+											</div>
+										</div>
+										<div class="cart-payment">
+											<div class="cart-left">
+												<p>共<em>3</em>件商品</p>
+												<span class="cart-price"><em>378</em>元</span>
+											</div>
+											<div class="cart-right">
+												<a class="btn-cart" href="javascript:void(0);">去购物车结算</a>
+											</div>
+										</div>
+									</div>
+								</li>
+								<!--mini-购物车栏 结束-->
+							</ul>
+							<!--头部登录时状态栏 开始-->
 						</div>
 					</div>
 				</div>
@@ -28,13 +182,14 @@
 			<!--主体内容开始-->
 			<div class="content">
 				<div class="content-container">
+					<!--轮播图部分 开始-->
 					<div class="banner">
 						<ul class="banner-slide">
-							<li style="background:cornflowerblue;"><img src="" alt="" /></li>
-							<li style="background:seashell;"><img src="" alt="" /></li>
-							<li style="background:goldenrod;"><img src="" alt="" /></li>
-							<li style="background:slategray;"><img src="" alt="" /></li>
-							<li style="background:lavender;"><img src="" alt="" /></li>
+							<li style="background:lavender;"><img src="https://i1.mifile.cn/a4/xmad_1553001447971_RgNpT.jpg" alt="" /></li>
+							<li style="background:cornflowerblue;"><img src="https://i1.mifile.cn/a4/xmad_15531706266207_cZlMr.jpg" alt="" /></li>
+							<li style="background:seashell;"><img src="https://i1.mifile.cn/a4/xmad_15532221946866_GWSJZ.jpg" alt="" /></li>
+							<li style="background:goldenrod;"><img src="https://i1.mifile.cn/a4/xmad_15529914399183_EUdDC.jpg" alt="" /></li>
+							<li style="background:slategray;"><img src="https://i1.mifile.cn/a4/xmad_15517939170939_oiXCK.jpg" alt="" /></li>
 						</ul>
 						<div class="focuses">
 							<ul>
@@ -47,10 +202,20 @@
 						</div>
 						<span class="slide-left">上一张</span>
 						<span class="slide-right">下一张</span>
-
 					</div>
+					<!--轮播图部分 结束-->
 					<div class="goods-block">
-						<div class="goods-container"></div>
+						<div class="goods-container">
+							<div class="good-group">
+								<!--<div class="goods-name">-->
+								<!--		<a href="javascript:void(0);" class=""></a>-->
+								<img src="https://i1.mifile.cn/a4/xmad_15531711416212_ZCfRS.jpg" alt="类目图片" style="width: 1240px;" />
+								<!--</div>-->
+								<div class="goods-list">
+									
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
