--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -130,8 +130,8 @@
                     </dl>
                     <!-- 加入购物车、立即购买 -->
                     <div class="property-buy-action">
-                        <a href="javascript:;" class="btn-primary" style="display: inline-block;">立即购买</a>
-                        <a href="javascript:;" class="btn-empty" style="display: inline-block;"><i></i>加入购物车</a>
+                        <a href="javascript:;" class="btn-primary">立即购买</a>
+                        <a href="javascript:;" class="btn-empty"><i></i>加入购物车</a>
                     </div>
                 </div>
             </div>
