--- a/src/pages/loading.html
+++ b/src/pages/loading.html
@@ -31,15 +31,8 @@
                 </div>
                 <div class="box-middle">
                 <p class="address"><input type="text" class="table1" name="biao1" id="email-001" placeholder="请输入手机号码" >
-                <p class="password"><input type="password" class="table2" placeholder="请输入密码" id="password-001" style="outline:none;"></p>
+                <p class="password"><input type="password" class="table2" id="password-001"><button class="get-code">获取验证码</button></p>
                 <div class="freeload">
-                                <!-- <select id="sel" display="none">
-                                        <option value="1" >商品预检员</option>
-                                        <option value="2">库存管理员</option>
-                                        <option value="3">退货管理员</option>
-                                        <option value="4">换货管理员</option>
-                                        <option value="5" selected="selected">超级管理员</option>
-                                </select>                -->
                 <a href="register.html" title="跳转注册页面" class="register"> 立即注册</a>
                 <a href="javascript:void(0)" title="*" class="forget"> 忘记密码？</a>
                 </div>
