--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -19,16 +19,8 @@
             <span class="import">*</span><span class="start">手机号码</span>
             <div class="telephone"><input type="text" class="table2" id="phone1" placeholder="+86" maxlength="11" ></div>
             <div class="paragraph1-01" id="phone-1-01"> 请填写正确的手机号码 </div>
-            <!-- 密码的申请 -->
-            <span class="import">*</span><span class="start">密码</span>
-            <div class="password"><input type="password" class="table2" id="password1" ></div>
-            <div class="paragraph1-01" id="pass1-01">密码长度应为6-18</div>
-            <!-- 再次确认密码 -->
-            <span class="import">*</span><span class="start">确认密码</span>
-            <div class="confirm-password"><input type="password" class="table2" id="password2" ></div>
-            <div class="paragraph1-01" id="pass2-01">确认密码错误！ </div>
             <!-- 验证码 -->
-            <span class="import">*</span><span class="start">验证码</span>
+            <span class="import-other">*</span><span class="start-other">验证码</span>
             <div class="telephone-code"><input type="text" class="table1" id="password2"><button class="get-code">获取验证码</button></div>
             <div class="paragraph1-01" id="pass2-01">验证码错误！ </div>
             <button class="register">立&nbsp即&nbsp注&nbsp册</button>
