--- a/src/pages/loading.html
+++ b/src/pages/loading.html
@@ -31,12 +31,12 @@
                 </div>
                 <div class="box-middle">
                 <p class="address"><input type="text" class="table1" name="biao1" id="email-001" placeholder="请输入手机号码" >
-                <p class="password"><input type="password" class="table2" id="password-001"><button class="get-code">获取验证码</button></p>
+                <p class="password"><input type="password" class="table2" id="password-001" placeholder="请输入验证码"><button class="get-code">获取验证码</button></p>
                 <div class="freeload">
                 <a href="register.html" title="跳转注册页面" class="register"> 立即注册</a>
                 <a href="javascript:void(0)" title="*" class="forget"> 忘记密码？</a>
                 </div>
-                <div class="load-01" id="loading">登&nbsp&nbsp陆</div>
+                <div id="loading"><button class="load-01">登&nbsp&nbsp陆</button></div>
                 <!-- <div class="insert-01"><a target="_blank" href="registerOrder.html" title="注册页面">注&nbsp&nbsp册</a></div> -->
             </div>
             </div>
