--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="order-product">
                     <div class="product-title">确认订单信息
-                        <button class="shoppingCart">返回购物车</button>
+                        <button class="shoppingCart"><a href="shoppingcart.html" alt="返回购物车">返回购物车</a></button>
                     </div>
                     <div class="product-list">
                         <table class="table">
