整合common头部，尾部样式

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>上海联蔚科技商城</title>
 	<link rel="stylesheet" type="text/css" href="../assets/styles/index.css" />
+	<link rel="stylesheet" type="text/css" href="../assets/styles/common.css">
 	<link rel="stylesheet" type="text/css" href="../assets/styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css">
 	<script src="../assets/javascript/jquery.min.js"></script>
