--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title>上海联蔚科技商城</title>
-    <link rel="stylesheet" type="text/css" href="../assets/styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/common.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/getOrderInfo.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/iconfont.css" />
     <script src="../assets/javascript/jquery.min.js"></script>
-    <script type="text/javascript" src="../assets/javascript/index-slide.js"></script>
 </head>
 <body>
     <div class="program-wrapper">
