--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -37,13 +37,51 @@
                                 <div class="order-address-check-name">徐**</div>
                                 <div class="order-address-check-phone">12345678901</div>
                             </div>
-                            <div class="order-address-check-content">一个真实的地址呀呀呀呀呀</div>
+                            <div class="order-address-check-content">一个真实的地址呀</div>
                             <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
                             <div class="order-address-check-ctrl">
                                 <div class="delete">删除</div>
                                 <div class="edit">修改</div>
                             </div>
                         </li>
+                        <li class="order-address-check checked">
+                                <div class="order-address-check-top">
+                                    <div class="order-address-check-name">徐**</div>
+                                    <div class="order-address-check-phone">12345678901</div>
+                                </div>
+                                <div class="order-address-check-content">一个真实的地址呀呀</div>
+                                <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                                <div class="order-address-check-ctrl">
+                                    <div class="delete">删除</div>
+                                    <div class="edit">修改</div>
+                                </div>
+                            </li>
+                            <li class="order-address-check checked">
+                                    <div class="order-address-check-top">
+                                        <div class="order-address-check-name">徐**</div>
+                                        <div class="order-address-check-phone">12345678901</div>
+                                    </div>
+                                    <div class="order-address-check-content">一个真实的地址呀呀呀</div>
+                                    <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                                    <div class="order-address-check-ctrl">
+                                        <div class="delete">删除</div>
+                                        <div class="edit">修改</div>
+                                    </div>
+                                </li>
+                        <li class="order-address-check checked">
+                            <!-- :class="item==index?'order-address-check':''" -->
+                                <div class="order-address-check-top">
+                                    <div class="order-address-check-name">徐**</div>
+                                    <div class="order-address-check-phone">12345678901</div>
+                                </div>
+                                <div class="order-address-check-content">一个真实的地址呀呀呀呀</div>
+                                <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                                <div class="order-address-check-ctrl">
+                                    <div class="delete">删除</div>
+                                    <div class="edit">修改</div>
+                                </div>
+                            </li>
+                        
                         <li class="order-address-check add">
                             <div class="order-address-icon" id="add"><span class="iconfont icon-zengjia"></span></div>
                             <div class="order-address-add-text">添加新的地址</div>
