--- a/src/pages/shoppingcart.html
+++ b/src/pages/shoppingcart.html
@@ -60,12 +60,12 @@
                         <tr class="cart-product">
                             <td class="cart-col-select">
                                 <!-- 选中框 -->
-                                <div class="mz-checkbox"></div>
+                                <div class="mz-checkbox checked"></div>
                                 <!-- 商品图片 -->
-                                <a href="" class="cart-product-link">
+                                <a href="javascript:;" class="cart-product-link">
                                     <img class="cart-product-img" alt="魅族 16th" src="../assets/images/goods.png">
                                 </a>
-                                <a href=""class="cart-product-link cart-product-info" >
+                                <a href="javascript:;"class="cart-product-link cart-product-info" >
                                     <!-- 商品名称 -->
                                     <p class="cart-product-item-name">魅族 16th</p>
                                     <!-- 商品型号 -->
@@ -75,20 +75,20 @@
                             <!-- 商品单价 -->
                             <td class="cart-col-price">
                                 <p>
-                                    <span class="cart-product-price">￥2498.00</span>
+                                    <span class="cart-product-price">￥ <a href="javascript:;">2498.00</a></span>
                                 </p>
                             </td>
                             <!-- 商品购买数量 -->
                             <td class="cart-col-number">
                                 <div class="mod-control">
-                                    <a title="减少" href="javascript:;" class="vm-minus" id="minus">-</a>
+                                    <a title="减少" href="javascript:;" class="vm-minus">-</a>
                                     <input type="text" value="1">
-                                    <a title="增加" href="javascript:;" class="vm-plus" id="add">+</a>
+                                    <a title="增加" href="javascript:;" class="vm-plus">+</a>
                                 </div>
                             </td>
                             <!-- 该商品购买总价 -->
                             <td class="cart-col-total">
-                                <span class="cart-product-price total main-goods">￥2498.00</span>
+                                <span class="cart-product-price total">￥<a href="javascript:;" class="cart-product-price total">2498.00</a></span>
                             </td>
                             <!-- 删除单个商品按钮 -->
                             <td class="cart-col-ctrl">
@@ -96,12 +96,94 @@
                             </td>
                         </tr>
                     </table>
+                    <table class="cart-merchant-body">
+                            <!-- 商品 -->
+                            <tr class="cart-product">
+                                <td class="cart-col-select">
+                                    <!-- 选中框 -->
+                                    <div class="mz-checkbox"></div>
+                                    <!-- 商品图片 -->
+                                    <a href="javascript:;" class="cart-product-link">
+                                        <img class="cart-product-img" alt="魅族 16th" src="../assets/images/goods.png">
+                                    </a>
+                                    <a href="javascript:;"class="cart-product-link cart-product-info" >
+                                        <!-- 商品名称 -->
+                                        <p class="cart-product-item-name">魅族 16th</p>
+                                        <!-- 商品型号 -->
+                                        <p class="cart-product-desc">全网通公开版 远山白 6+64GB</p>
+                                    </a>
+                                </td>
+                                <!-- 商品单价 -->
+                                <td class="cart-col-price">
+                                    <p>
+                                        <span class="cart-product-price">￥ <a href="javascript:;">2498.00</a></span>
+                                    </p>
+                                </td>
+                                <!-- 商品购买数量 -->
+                                <td class="cart-col-number">
+                                    <div class="mod-control">
+                                        <a title="减少" href="javascript:;" class="vm-minus">-</a>
+                                        <input type="text" value="1">
+                                        <a title="增加" href="javascript:;" class="vm-plus">+</a>
+                                    </div>
+                                </td>
+                                <!-- 该商品购买总价 -->
+                                <td class="cart-col-total">
+                                    <span class="cart-product-price total">￥<a href="javascript:;" class="cart-product-price total">2498.00</a></span>
+                                </td>
+                                <!-- 删除单个商品按钮 -->
+                                <td class="cart-col-ctrl">
+                                    <div class="cart-product-remove"></div>
+                                </td>
+                            </tr>
+                    </table>
+                    <table class="cart-merchant-body">
+                            <!-- 商品 -->
+                            <tr class="cart-product">
+                                <td class="cart-col-select">
+                                    <!-- 选中框 -->
+                                    <div class="mz-checkbox"></div>
+                                    <!-- 商品图片 -->
+                                    <a href="javascript:;" class="cart-product-link">
+                                        <img class="cart-product-img" alt="魅族 16th" src="../assets/images/goods.png">
+                                    </a>
+                                    <a href="javascript:;"class="cart-product-link cart-product-info" >
+                                        <!-- 商品名称 -->
+                                        <p class="cart-product-item-name">魅族 16th</p>
+                                        <!-- 商品型号 -->
+                                        <p class="cart-product-desc">全网通公开版 远山白 6+64GB</p>
+                                    </a>
+                                </td>
+                                <!-- 商品单价 -->
+                                <td class="cart-col-price">
+                                    <p>
+                                        <span class="cart-product-price">￥ <a href="javascript:;">2498.00</a></span>
+                                    </p>
+                                </td>
+                                <!-- 商品购买数量 -->
+                                <td class="cart-col-number">
+                                    <div class="mod-control">
+                                        <a title="减少" href="javascript:;" class="vm-minus">-</a>
+                                        <input type="text" value="1">
+                                        <a title="增加" href="javascript:;" class="vm-plus">+</a>
+                                    </div>
+                                </td>
+                                <!-- 该商品购买总价 -->
+                                <td class="cart-col-total">
+                                    <span class="cart-product-price total">￥<a href="javascript:;" class="cart-product-price total">2498.00</a></span>
+                                </td>
+                                <!-- 删除单个商品按钮 -->
+                                <td class="cart-col-ctrl">
+                                    <div class="cart-product-remove"></div>
+                                </td>
+                            </tr>
+                    </table>
                 </li>
             </ul>
         </div>
         <!-- 购物车底部      -->
         <div class="cart-footer">
-            <div class="mzcontainer">
+            <div class="mzcontainer center">
                 <div class="cart-footer-left">
                     <!-- 全选按钮 -->
                     <div class="cart-select-all JSelectAll">
@@ -123,8 +205,8 @@
                         合计(不含运费)：<span class="cart-footer-total" id="totalPrice">0.00</span>
                     </span>
                     <!-- 结算按钮 -->
-                    <div class="mz-btn success to-order-btn" id="cartSubmit">去结算
-                    </div>
+                    <button class="mz-btn success to-order-btn" id="cartSubmit">去结算
+                    </button>
                 </div>
             </div>
         </div>
