--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -9,7 +9,7 @@
     <title>联蔚注册页面</title>
 </head>
 <body>
-    <div class="main">
+    <div class="main-register">
         <div class="box">
             <div class="logo"><img src="../assets/images/connext.png" alt="*"></div>
             <div class="box-top">
@@ -21,12 +21,12 @@
             <div class="paragraph1-01" id="phone-1-01"> 请填写正确的手机号码 </div>
             <!-- 验证码 -->
             <span class="import-other">*</span><span class="start-other">验证码</span>
-            <div class="telephone-code"><input type="text" class="table1" id="password2"><button class="get-code">获取验证码</button></div>
+            <div class="telephone-code"><input type="text" class="table1" id="password2"><button class="get-code" id="btn" type="button">获取验证码</button></div>
             <div class="paragraph1-01" id="pass2-01">验证码错误！ </div>
             <button class="register">立&nbsp即&nbsp注&nbsp册</button>
         </div>
     </div>
-    <div class="footer">
+    <div class="footer-register">
         <div class="footer-right-top">
             <a href="javascript:void(0)" title="*">联蔚黄页</a>
             <a href="javascript:void(0)" title="*">联蔚制造</a>
@@ -41,6 +41,30 @@
             <span class="footer-right-bottom-last">（数据来源：艾媒联蔚报告）</span>
         </div>
     </div>
-    <script type="text/javascript" src="../assets/javascript/loadingRegister/registerOrder.js"></script>
+<script type="text/javascript"> 
+    var num2 = window.localStorage.getItem("number-register");
+        function invokeSettime(obj){
+            var countdown=60;
+            settime(obj);
+            function settime(obj) {
+                if (num2 == 0) {
+                    $(obj).attr("disabled",false);
+                    $(obj).text("获取验证码");
+                    window.localStorage.removeItem('number-register');
+                    return;
+                } else {
+                    $(obj).attr("disabled",true);
+                    $(obj).text("(" + num2 + ") s 重发");
+                    num2--;
+                    window.localStorage.setItem("number-register",  num2);
+                }
+                setTimeout(function() {
+                            settime(obj) }
+                        ,1000)
+            }
+        }
+          new invokeSettime("#btn");
+    </script>
+<script type="text/javascript" src="../assets/javascript/loadingRegister/registerOrder.js"></script>
 </body>
 </html>
