--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -47,7 +47,7 @@
             var countdown=60;
             settime(obj);
             function settime(obj) {
-                if (num2 == 0) {
+                if (num2 <= 0) {
                     $(obj).attr("disabled",false);
                     $(obj).text("获取验证码");
                     window.localStorage.removeItem('number-register');
