--- a/src/pages/getOrderInfo.html
+++ b/src/pages/getOrderInfo.html
@@ -38,7 +38,7 @@
                                 <div class="order-address-check-phone">12345678901</div>
                             </div>
                             <div class="order-address-check-content">一个真实的地址呀</div>
-                            <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                            <div class="order-address-check-checked"><span class="iconfont icon-tianchongxuanxiangkuangqueding"></span></div>
                             <div class="order-address-check-ctrl">
                                 <div class="delete">删除</div>
                                 <div class="edit">修改</div>
@@ -50,7 +50,7 @@
                                 <div class="order-address-check-phone">12345678901</div>
                             </div>
                             <div class="order-address-check-content">一个真实的地址呀呀</div>
-                            <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                            <div class="order-address-check-checked"><span class="iconfont icon-tianchongxuanxiangkuangqueding"></span></div>
                             <div class="order-address-check-ctrl">
                                 <div class="delete">删除</div>
                                 <div class="edit">修改</div>
@@ -62,7 +62,7 @@
                                 <div class="order-address-check-phone">12345678901</div>
                             </div>
                             <div class="order-address-check-content">一个真实的地址呀呀呀</div>
-                            <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                            <div class="order-address-check-checked"><span class="iconfont icon-tianchongxuanxiangkuangqueding"></span></div>
                             <div class="order-address-check-ctrl">
                                 <div class="delete">删除</div>
                                 <div class="edit">修改</div>
@@ -75,7 +75,7 @@
                                 <div class="order-address-check-phone">12345678901</div>
                             </div>
                             <div class="order-address-check-content">一个真实的地址呀呀呀呀</div>
-                            <div class="order-address-check-checked"><span class="iconfont icon-right-5"></span></div>
+                            <div class="order-address-check-checked"><span class="iconfont icon-tianchongxuanxiangkuangqueding"></span></div>
                             <div class="order-address-check-ctrl">
                                 <div class="delete">删除</div>
                                 <div class="edit">修改</div>
@@ -168,7 +168,7 @@
                                 <ul class="list">
                                     <li class="lable">
                                         <input type="radio" name="radio" value="1" class="radio">
-                                        <span class="iconfont icon-iconzhi01"></span>
+                                        <span class="iconfont icon-alipay"></span>
                                     </li>
                                 </ul>
                             </div>
